# streaming_json

./: .gitignore  Makefile  README.md
benchmarks/dynamodb/: .gitignore  README.md  json-eq.sh
benchmarks/dynamodb/ddb_convert_python/: README.md  ddb_convert.py  test_ddb_convert.py
benchmarks/dynamodb/ddb_convert_python_noboto/: README.md  ddb_convert.py
benchmarks/dynamodb/ddb_convert_rust/: Cargo.toml  README.md
benchmarks/dynamodb/ddb_convert_rust/src/: main.rs
benchmarks/dynamodb/roundtrip_from_ddb/: Makefile
benchmarks/dynamodb/roundtrip_from_ddb/original-ddb/: all-types-dynamodb.json  book-dynamodb.json  products-dynamodb.json  users-dynamodb.json
benchmarks/dynamodb/roundtrip_to_ddb/: Makefile
benchmarks/dynamodb/roundtrip_to_ddb/original-normal/: all-types-normal.json  products-normal.json  users-normal.json
benchmarks/dynamodb/transcript/: file_stats.json  file_stats.py  log-py-boto  log-py-noboto  log-rust  log-scan-json  parse_logs.py  stats.json  visualize_performance.py
bufvec/: Cargo.toml  README.md  plan.md  prompt.md
bufvec/benches/: performance.rs
bufvec/doc/: llms.txt
bufvec/src/: core.rs  error.rs  iter.rs  lib.rs
bufvec/tests/: dictionary_tests.rs  error_tests.rs  integration_tests.rs  iterator_tests.rs  stack_tests.rs
examples/dynamodb/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md
examples/dynamodb/doc/: conversion-guide.md  dynamodb-json-format.md
examples/dynamodb/docs/: dynamodb-json-format.md
examples/dynamodb/fixture/: README.md  all-types-dynamodb.json  book-dynamodb.json  book-normal.json  products-normal.json  users-normal.json
examples/dynamodb/screencast/: .gitignore  Makefile  example.json  generate_screencast.py
examples/dynamodb/src/: ddb_to_normal.rs  lib.rs  main.rs  normal_to_ddb.rs
examples/dynamodb/tests/: conversion_tests.rs  fromddb_invalid_tests.rs  fromddb_tests.rs  nesting_tests.rs  toddb_tests.rs
examples/idtransform/: README.md
rjiter/: Cargo.toml  README.md  changelog.md  plan.md
rjiter/doc/: llms-all.txt  llms-readme.txt  llms-summary.txt  llms.txt
rjiter/doc/jiter/: llms-all.txt  llms-summary.txt  llms.txt
rjiter/src/: buffer.rs  error.rs  lib.rs  rjiter.rs
rjiter/test/: rjiter_test.rs
rjiter/tests/: buffer_test.rs  chunk_reader.rs  error_test.rs  lookahead_test.rs  one_byte_reader.rs  rjiter_test.rs
scan_json/: Cargo.toml  README.md  changelog.md  llms-all.txt  llms.txt
scan_json/doc/: llms-all.txt  llms-summary.txt  llms.txt
scan_json/src/: action.rs  error.rs  idtransform.rs  lib.rs  matcher.rs  scan.rs  scan_json.rs  stack.rs  trigger.rs
scan_json/tests/: idtransform_test.rs  matcher_test.rs  scan_json_test.rs  scan_test.rs
u8pool/: Cargo.toml  README.md  changelog.md  llms.txt  plan.md  prompt.md
u8pool/benches/: performance.rs
u8pool/doc/: llms-all.txt  llms.txt
u8pool/src/: core.rs  error.rs  iter.rs  lib.rs  slice_descriptor.rs
u8pool/tests/: assoc_tests.rs  dictionary_tests.rs  error_tests.rs  integration_tests.rs  iterator_tests.rs  reverse_iterator_tests.rs  stack_tests.rs
