[package]
name = "bufvec"
version = "0.1.0"
edition = "2021"
description = "A zero-allocation vector implementation using client-provided buffers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/bufvec"
keywords = ["no-std", "embedded", "vector", "zero-allocation", "buffer"]
categories = ["no-std", "embedded", "data-structures"]

[dependencies]

[features]
default = []
std = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
