[package]
name = "rjiter"
version = "1.2.0"
edition = "2021"
authors = ["Oleg Parashchenko <olpa@uucode.com>"]
description = "Streaming JSON parser on top of Jiter"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/olpa/streaming_json"
repository = "https://github.com/olpa/streaming_json"
keywords = ["json"]
categories = ["parser-implementations", "parsing"]

[lib]
crate-type = ["lib"]

[dependencies]
jiter = "0.8.2"
embedded-io = "0.6"

[dev-dependencies]
embedded-io = { version = "0.6", features = ["std"] }

[features]
default = []
std = ["embedded-io/std", "display"]
display = []
