[package]
name = "scan_json"
version = "1.2.0"
edition = "2021"
authors = ["Oleg Parashchenko <olpa@uucode.com>"]
description = "React to elements in a JSON stream"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/olpa/streaming_json"
repository = "https://github.com/olpa/streaming_json"
keywords = ["json"]
categories = ["parser-implementations", "parsing"]

[lib]
crate-type = ["lib"]

[dependencies]
rjiter = { version = "1.2.0", path = "../rjiter" }
u8pool = { version = "1.0.0", path = "../u8pool" }
embedded-io = "0.6"

[dev-dependencies]
embedded-io = { version = "0.6", features = ["std"] }

[features]
default = []
std = ["embedded-io/std", "rjiter/std", "u8pool/std", "display"]
display = []
