[package]
name = "scan_json"
version = "2.0.0"
edition = "2021"
authors = ["Oleg Parashchenko <olpa@uucode.com>"]
description = "React to elements in a JSON stream"
readme = "README.md"
license = "MIT"
homepage = "https://github.com/olpa/streaming_json"
repository = "https://github.com/olpa/streaming_json"
keywords = ["json"]
categories = ["parser-implementations", "parsing"]

[lib]
crate-type = ["lib"]

[dependencies]
embedded-io = "0.7.1"
rjiter = "1.3"
u8pool = "1.1.2"

[dev-dependencies]
embedded-io = { version = "0.7.1", features = ["std"] }

[features]
default = []
std = ["embedded-io/std", "rjiter/std", "u8pool/std", "display"]
display = []
