[package]
name = "u8pool"
version = "0.1.0"
edition = "2021"
description = "A zero-allocation vector implementation using client-provided buffers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/u8pool"
keywords = ["no-std", "embedded", "vector", "zero-allocation", "buffer"]
categories = ["no-std", "embedded", "data-structures"]

[dependencies]
thiserror = { version = "2.0", default-features = false }

[features]
default = []
std = []

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "performance"
harness = false
