[package]
name = "u8pool"
version = "0.1.0"
edition = "2021"
description = "Stack for u8 slices in a client-provided buffers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-username/u8pool"
keywords = ["no-std", "embedded", "stack", "zero-allocation", "buffer"]
categories = ["no-std", "embedded", "data-structures"]

[dependencies]
thiserror = { version = "2.0", default-features = false }

[features]
default = []
std = []

