[package]
name = "u8pool"
version = "1.1.2"
edition = "2021"
description = "Stack for u8 slices in a client-provided buffers"
license = "MIT"
repository = "https://github.com/olpa/streaming_json/tree/master/u8pool"
keywords = ["memory-pool", "no-std", "embedded", "zero-allocation", "stack"]
categories = ["memory-management", "no-std", "embedded"]

[dependencies]

[features]
default = []
std = ["display"]
display = []
