[package]
name = "ddb_convert_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
aws-sdk-dynamodb = "1.0"
anyhow = "1.0"
indexmap = "2.0"
